--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       Title: <input id="title" name="data" />
       <button id="btn" type="submit">Set</button>
 
-      <h1>Release 4</h1>
+      <h1>version 2.0.2</h1>
       <script src="./src/renderer.js"></script>
     </form>
   </body>
